change Mastodon link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,7 @@ nav:
         - links.md
         - My Sites:
             - Blogger: https://maroph.blogspot.com/
-            - Fediverse: https://fosstodon.org/@maroph
+            - Fediverse: https://muenchen.social/@maroph
             - GitHub: https://github.com/maroph/
             - GitHub Gist: https://gist.github.com/maroph/
             - Gravatar: https://en.gravatar.com/maroph
