--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ theme:
         - navigation.tracking
         - navigation.tabs
         - navigation.tabs.sticky
+        - search.suggest
+        - search.highlight
 
 nav:
     - Home: index.md
@@ -101,7 +103,7 @@ site_dir: site
 use_directory_urls: false
 strict: true
 
-copyright: Copyright (c) 2020-2022 <a href="https://github.com/maroph">Manfred Rosenboom</a>
+copyright: Copyright (c) 2020-2023 <a href="https://github.com/maroph">Manfred Rosenboom</a>
 
 markdown_extensions:
     - attr_list
@@ -113,7 +115,5 @@ markdown_extensions:
 
 plugins:
     - git-revision-date
-    - search:
-        lang: en
-        min_search_length: 3
+    - search
 
