--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 site_name: My Main GitHub Page
 site_url: https://maroph.github.io/
-site_description: main GitHub Page
+site_description: My main GitHub Page
 site_author: Manfred Rosenboom (maroph)
 
 repo_name: maroph/maroph.github.io
@@ -31,6 +31,7 @@ theme:
           toggle:
             icon: material/brightness-4
             name: Switch to light mode
+#    favicon: assets/Vi_logo.ico
     font: false
     language: en
     direction: ltr
@@ -39,10 +40,10 @@ theme:
         - content.action.edit
         - content.action.view
         - content.code.copy
-        - navigation.expand
         - navigation.footer
         - navigation.indexes
         - navigation.instant
+        - navigation.instant.progress
         - navigation.prune
         - navigation.tracking
         - navigation.tabs
@@ -50,6 +51,8 @@ theme:
         - navigation.top
         - search.suggest
         - search.highlight
+        - toc.follow
+        - toc.integrate
     icon:
         repo: fontawesome/brands/github
         edit: material/pencil 
@@ -57,19 +60,22 @@ theme:
 
 nav:
     - Home: index.md
+    - Blog:
+        - blog/index.md
     - Links:
         - links.md
         - My Sites:
             - links_my_sites.md
             - Blogger: https://maroph.blogspot.com/
             - Bluesky: https://bsky.app/profile/maroph.bsky.social
-            - Fediverse: https://muenchen.social/@maroph
+            - CodePen: https://codepen.io/maroph/
             - GitHub: https://github.com/maroph/
             - GitHub Gist: https://gist.github.com/maroph/
             - Gravatar: https://en.gravatar.com/maroph
+            - JSFiddle: https://jsfiddle.net/user/maroph
+            - Mastodon: https://muenchen.social/@maroph
             - Pastebin: https://pastebin.com/u/maroph
             - Personal Home Page: https://manfred.rosenboom.name/
-            - Twitter: https://twitter.com/maroph
         - GitHub Pages:
             - links_github_pages.md
             - Main Page: https://maroph.github.io/
@@ -165,6 +171,34 @@ plugins:
         enabled: false
     - search:
         lang: en
+    - blog:
+        enabled: true
+        authors: false
+        blog_dir: blog
+        blog_toc: false
+        draft: false
+        draft_on_serve: false
+        draft_if_future_date: true
+        pagination: true
+        pagination_per_page: 10
+        pagination_url_format: "page/{page}"
+        pagination_if_single_page: false
+#        post_date_format: long
+#        post_date_format: full
+        post_date_format: MMMM dd, yyyy
+#        post_date_format: MMMM dd, yyyy - H:mm
+        post_excerpt: optional
+        post_excerpt_separator: "<!--more-->"
+        post_readtime: false
+        archive: true
+        archive_name: Archive
+        archive_date_format: yyyy
+        archive_url_format: "archive/{date}"
+        archive_toc: true
+        categories: false
+        categories_name: Categories
+        categories_url_format: "category/{slug}"
+        categories_toc: true
 
 extra:
     social:
