--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,19 +60,15 @@ theme:
 
 nav:
     - Home: index.md
-    - Blog:
-        - blog/index.md
     - Links:
         - links.md
         - My Sites:
             - links_my_sites.md
-            - Blogger: https://maroph.blogspot.com/
             - Bluesky: https://bsky.app/profile/maroph.bsky.social
             - CodePen: https://codepen.io/maroph/
             - GitHub: https://github.com/maroph/
             - GitHub Gist: https://gist.github.com/maroph/
             - Gravatar: https://en.gravatar.com/maroph
-            - JSFiddle: https://jsfiddle.net/user/maroph
             - Mastodon: https://muenchen.social/@maroph
             - Pastebin: https://pastebin.com/u/maroph
             - Personal Home Page: https://manfred.rosenboom.name/
@@ -84,11 +80,12 @@ nav:
             - openHPI Kurs Linux CLI: https://maroph.github.io/openhpi_linux-cli_2022/
         - Collaboration:
             - links_collaboration.md
+            - Cryptpad (Digitalcourage): https://cryptpad.digitalcourage.de/
             - DFN Terminplaner: https://terminplaner4.dfn.de/
             - Etherpad (ffmuc.net): https://ffmuc.net/pad/
             - Jitsi Meet (ffmuc.net): https://meet.ffmuc.net/
-            - nuudel: https://nuudel.digitalcourage.de/
             - NoPaste: https://nopaste.dnshome.org/
+            - Nuudel (Digitalcourage): https://nuudel.digitalcourage.de/
             - Padlet: https://padlet.com/
             - PrivateBin: https://privatebin.net/
         - GPT:
@@ -139,6 +136,7 @@ nav:
     - Info:
         - info.md
         - About: info/about.md
+        - GPG Key: info/gpg.md
         - GDPR/DSGVO: info/gdpr.md
         - License: info/license.md
         - Sources: info/sources.md
@@ -171,37 +169,12 @@ plugins:
         enabled: false
     - search:
         lang: en
-    - blog:
-        enabled: true
-        authors: false
-        blog_dir: blog
-        blog_toc: false
-        draft: false
-        draft_on_serve: false
-        draft_if_future_date: true
-        pagination: true
-        pagination_per_page: 10
-        pagination_url_format: "page/{page}"
-        pagination_if_single_page: false
-#        post_date_format: long
-#        post_date_format: full
-        post_date_format: MMMM dd, yyyy
-#        post_date_format: MMMM dd, yyyy - H:mm
-        post_excerpt: optional
-        post_excerpt_separator: "<!--more-->"
-        post_readtime: false
-        archive: true
-        archive_name: Archive
-        archive_date_format: yyyy
-        archive_url_format: "archive/{date}"
-        archive_toc: true
-        categories: false
-        categories_name: Categories
-        categories_url_format: "category/{slug}"
-        categories_toc: true
 
 extra:
+#icons: https://fontawesome.com/search?o=r&f=brands
     social:
+        - icon: fontawesome/brands/codepen
+          link: https://codepen.io/maroph/
         - icon: fontawesome/brands/github
           link: https://github.com/maroph
         - icon: fontawesome/brands/mastodon 
