--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,40 +174,48 @@ plugins:
           timezone: Europe/Amsterdam
           type: iso_datetime
     - info:
-        enabled: false
+          enabled: false
+# https://mkdocs-macros-plugin.readthedocs.io/en/latest/
+#    - macros:
+#          on_undefined: keep
     - search:
-        lang: en
+          lang: en
 # https://squidfunk.github.io/mkdocs-material/setup/setting-up-a-blog/#writing-your-first-post
     - blog:
-        enabled: true
-        authors: false
-        blog_dir: blog
-        blog_toc: true
-        draft: false
-        draft_on_serve: false
-        draft_if_future_date: true
-        pagination: true
-        pagination_per_page: 10
-        pagination_url_format: "page/{page}"
-        post_date_format: EEEE, MMMM d, yyyy
-        pagination_if_single_page: false
-        post_excerpt: optional
-        post_excerpt_separator: "<!--more-->"
-        post_readtime: false
-        archive: true
-        archive_name: Archive
-        archive_date_format: yyyy
-        archive_url_format: "archive/{date}"
-        archive_toc: true
-        categories: false
-        categories_name: Categories
-        categories_url_format: "category/{slug}"
-        categories_toc: true
-        categories_allowed:
-            - General
+          enabled: true
+          authors: false
+          blog_dir: blog
+          blog_toc: true
+          draft: false
+          draft_on_serve: false
+          draft_if_future_date: true
+          pagination: true
+          pagination_per_page: 10
+          pagination_url_format: "page/{page}"
+          post_date_format: EEEE, MMMM d, yyyy
+          pagination_if_single_page: false
+          post_excerpt: optional
+          post_excerpt_separator: "<!--more-->"
+          post_readtime: false
+          archive: true
+          archive_name: Archive
+          archive_date_format: yyyy
+          archive_url_format: "archive/{date}"
+          archive_toc: true
+          categories: false
+          categories_name: Categories
+          categories_url_format: "category/{slug}"
+          categories_toc: true
+          categories_allowed:
+              - General
 
 extra:
-#icons: https://fontawesome.com/search?o=r&f=brands
+#    macros:
+#        openssl_1_1_1: 1.1.1w
+#        openssl_3_0: 3.0.12
+#        openssl_3_1: 3.1.4
+#        openssl_3_2: 3.2.0
+    #icons: https://fontawesome.com/search?o=r&f=brands
     social:
         - icon: fontawesome/brands/codepen
           link: https://codepen.io/maroph/
