--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -138,12 +138,6 @@ nav:
             - Tomcat: https://tomcat.apache.org/
             - WildFly: https://www.wildfly.org/
             - XAMPP: https://www.apachefriends.org/
-    - TechNotes:
-        - technotes.md
-        - GnuPG: technotes/gnupg/gnupg.md
-        - OpenSSL:
-            - technotes/openssl/openssl.md
-            - OpenSSL CLI Tool: technotes/openssl/openssl_cli_tool/openssl_cli_tool.md
     - Info:
         - info.md
         - About: info/about.md
@@ -159,7 +153,7 @@ site_dir: site
 use_directory_urls: false
 strict: true
 
-copyright: Copyright (c) 2020-2024 <a href="https://maroph.github.io/">Manfred Rosenboom</a>
+copyright: Copyright (c) 2020-2025 CC-BY 4.0 <a href="https://maroph.github.io/">Manfred Rosenboom</a>
 
 markdown_extensions:
     - attr_list
