--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,18 @@
+# my main .gitattributes file
+# Last updated: 18-AUG-2025
 .* export-ignore
 #
 * text=auto
 #
+Makefile  text
+#
+*.adoc    text
 *.asc     text
 *.bash    text eol=lf
 *.c       text
 *.css     text
 *.css.map text
+*.csv     text
 *.html    text
 *.java    text
 *.js      text
@@ -16,11 +22,16 @@
 *.py      text
 *.sh      text eol=lf
 *.sql     text
+*.svg     text
+*.toml    text
 *.txt     text
 *.xml     text
+*.yaml    text
 *.yml     text
 #
 *.class binary
+*.ear   binary
+*.eot   binary
 *.exe   binary
 *.gif   binary
 *.gz    binary
@@ -30,5 +41,8 @@
 *.pdf   binary
 *.png   binary
 *.rar   binary
+*.ttf   binary
 *.war   binary
+*.woff  binary
+*.woff2 binary
 *.zip   binary
