--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ on:
     workflow_dispatch:
 
 permissions:
-  contents: read, write
-  pages: read, write
+  contents: write
+  pages: write
   id-token: write
 
 jobs:
