--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,18 +1,12 @@
-name: ci
+name: Documentation
 on:
   push:
     branches:
       - main
-    paths:
-      - 'docs/**'
-      - './mkdocs.yml'
-    workflow_dispatch:
-
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
-
 jobs:
   deploy:
     environment:
@@ -26,10 +20,9 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install zensical
-      - run: zensical build --clean 
+      - run: zensical build --clean
       - uses: actions/upload-pages-artifact@v4
         with:
           path: site
       - uses: actions/deploy-pages@v4
         id: deployment
-
