--- a/zensical.toml
+++ b/zensical.toml
@@ -41,7 +41,7 @@ nav = [
   ]}
 ]
 
-# extra_css = ["stylesheets/extra.css"]
+extra_css = ["assets/extra/css/extra.css"]
 # extra_javascript = ["javascripts/extra.js"]
 
 
